--- a/dist.ini
+++ b/dist.ini
@@ -45,8 +45,8 @@ allow_dirty = cpanfile
 allow_dirty = README.md
 [TestRelease]            ; ensure t/ tests pass
 [ConfirmRelease]         ; prompt before uploading
-;[UploadToCPAN]           ; uploads to CPAN
-[FakeRelease]            ; fake release (do nothing)
+[UploadToCPAN]           ; uploads to CPAN
+;[FakeRelease]            ; fake release (do nothing)
 
 ; after release
 [Git::Commit / Commit_Dirty_Files]      ; commit generated/munged files (as released)
