fix changelog for dzil commit dirty files

--- a/dist.ini
+++ b/dist.ini
@@ -50,6 +50,8 @@ allow_dirty = README.md
 
 ; after release
 [Git::Commit / Commit_Dirty_Files]      ; commit generated/munged files (as released)
+changelog = CHANGES
+
 [Git::Tag]                              ; tag repo in Git with custom tag
 tag_format = release-%v
 
