site_name from config to attr to keyword to var

--- a/example/config.yml
+++ b/example/config.yml
@@ -52,4 +52,5 @@ plugins :
                         via : sendmail     # Options passed to $msg->send
 
 
-    UserAdmin : 1
+    UserAdmin :
+        site_name : Frobnicators, LLC
